--- a/src/app/Furniture/home/home.component.html
+++ b/src/app/Furniture/home/home.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<!-- <mat-toolbar color="primary">
   <mat-toolbar-row>
 
     <div class="toolBar">
@@ -11,7 +11,9 @@
     <div class="toolBar" (click) = "productMethod()">Products</div>
     <div class="toolBar" (click) = "aboutMethod()">About</div>
   </mat-toolbar-row>
-</mat-toolbar>
+</mat-toolbar> -->
+
+<app-header></app-header>
 
 <mat-drawer-container class="example-container" autosize>
     <mat-drawer #drawer class="example-sidenav" mode="side">
